// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > analysis clearIsochroneResults should work 1`] = `
Object {
  "type": "clear isochrone results",
}
`;

exports[`actions > analysis enterAnalysisMode should work 1`] = `
Object {
  "type": "enter analysis mode",
}
`;

exports[`actions > analysis exitAnalysisMode should work 1`] = `
Object {
  "type": "exit analysis mode",
}
`;

exports[`actions > analysis setActiveVariant should work 1`] = `
Object {
  "type": "set active variant",
}
`;

exports[`actions > analysis setComparisonProject should work 1`] = `
Object {
  "payload": Object {
    "_id": "COMPARISON_ID",
    "bundleId": "BUNDLE ID",
    "variantIndex": 1,
  },
  "type": "set comparison project",
}
`;

exports[`actions > analysis setIsochroneCutoff should work 1`] = `
Object {
  "type": "set isochrone cutoff",
}
`;

exports[`actions > analysis setIsochroneFetchStatus should work 1`] = `
Object {
  "type": "set isochrone fetch status",
}
`;

exports[`actions > analysis setIsochroneLonLat should work 1`] = `
Object {
  "payload": Object {
    "lat": 12,
    "lon": 34,
  },
  "type": "set isochrone lonlat",
}
`;

exports[`actions > analysis setIsochroneResults should work 1`] = `
Object {
  "type": "set isochrone results",
}
`;

exports[`actions > analysis setProfileRequest should work 1`] = `
Object {
  "payload": Object {
    "maxRides": 20,
  },
  "type": "set profile request",
}
`;

exports[`actions > analysis setProjectApplicationErrors should work 1`] = `
Object {
  "payload": Array [
    Object {
      "messages": Array [
        "Headway is not greater than zero.",
      ],
      "modificationId": "Add Trip Pattern",
      "title": "Error while applying the modification entitled 'Add Trip Pattern'.",
    },
  ],
  "type": "set project application errors",
}
`;
